Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -187,7 +187,7 @@ define view entity R_Department
 </br>
 
 - Association Cardinality는 Target 쪽 PK 기준으로 판단
-- Association Cardinality 종류 : [0..1], [1..1], [0..*], [1..*]
+- Association Cardinality 종류 : `[0..1]` , `[1..1]` , `[0..*]` , `[1..*]`
 - Target의 PK를 기준으로 매핑하면 결과는 최대 1건이라 *가 불가능하고, PK가 아닌 필드로 매핑하면 여러 건 가능함
 - ON 조건은 반드시 Primary Key일 필요는 없음
 ```abap
