Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -190,6 +190,7 @@ define view entity R_Department
 - Association Cardinality 종류 : `[0..1]` , `[1..1]` , `[0..*]` , `[1..*]`
 - Target의 PK를 기준으로 매핑하면 결과는 최대 1건이라 *가 불가능하고, PK가 아닌 필드로 매핑하면 여러 건 가능함
 - ON 조건은 반드시 Primary Key일 필요는 없음
+- 복합 PK를 전부 매핑 → 최대 1건 / 복합 PK를 일부만 매핑 → 여러 건 가능
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
@@ -323,5 +324,42 @@ define view ZCDSEMPINFO_B03 as select from ztempinfo_b03
   assigndate as AssignDate,
   role as Role,
   memo as Memo
+}
+```
+</br>
+</br>
+</br>
+
+### 실습 3
+- Foreign Key 설정 실습
+- Association Cardinality 실습
+
+<img width="395" height="221" alt="image" src="https://github.com/user-attachments/assets/4bc38d36-ae21-4dbe-9848-1e66e66caf85" />
+
+</br>
+
+```abap
+@EndUserText.label : 'Department (with Foreign Key Relations)'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+@AbapCatalog.tableCategory : #TRANSPARENT
+@AbapCatalog.deliveryClass : #A
+@AbapCatalog.dataMaintenance : #RESTRICTED
+define table z03depment {
+
+  key client   : abap.clnt not null;
+  key id       : /lrn/department_id not null;
+  description  : /lrn/depment_description;
+  @AbapCatalog.foreignKey.screenCheck : false
+  head_id      : /lrn/depment_head
+    with foreign key [0..1,0..1] /lrn/employ_rel
+      where client = z03depment.client
+        and employee_id = z03depment.head_id;
+  @AbapCatalog.foreignKey.screenCheck : false
+  assistant_id : /lrn/depment_assistant
+    with foreign key [0..1,1] /lrn/employ_rel
+      where client = z03depment.client
+        and employee_id = z03depment.assistant_id;
+  include /lrn/s_admin;
+
 }
 ```
