Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -335,9 +335,11 @@ define view ZCDSEMPINFO_B03 as select from ztempinfo_b03
 - Association Cardinality 실습
 
 <img width="306" height="172" alt="image" src="https://github.com/user-attachments/assets/b7125276-b60a-410d-a205-e553fc765909" />
-
+</br>
+</br>
 </br>
 
+- DB Table `z03depment` Foreign Key 설정
 ```abap
 @EndUserText.label : 'Department (with Foreign Key Relations)'
 @AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
@@ -361,5 +363,64 @@ define table z03depment {
         and employee_id = z03depment.assistant_id;
   include /lrn/s_admin;
 
+}
+```
+- CDS `Z03_R_Employee` Association Cardinality 맞추기
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_R_Employee'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_R_Employee as select from z03employ
+  association [1..1] to Z03_R_Department as _Department
+    on $projection.DepartmentId = _Department.Id
+{
+    key employee_id as EmployeeId,
+    first_name as FirstName,
+    last_name as LastName,
+    birth_date as BirthDate,
+    entry_date as EntryDate,
+    department_id as DepartmentId,
+    @Semantics.amount.currencyCode: 'CurrencyCode'
+    annual_salary         as AnnualSalary,
+    @EndUserText.label: 'Currency Key'
+    currency_code         as CurrencyCode,
+    created_by as CreatedBy,
+    created_at as CreatedAt,
+    local_last_changed_by as LocalLastChangedBy,
+    local_last_changed_at as LocalLastChangedAt,
+    last_changed_at as LastChangedAt,
+    
+    _Department
+}
+```
+- CDS `Z03_R_Department` Association Cardinality 맞추기
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_R_Department'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_R_Department
+  as select from z03depment
+  association[0..*] to Z03_R_Employee as _Employee
+    on $projection.Id = _Employee.DepartmentId
+  association [0..1] to Z03_R_Employee as _Head
+    on $projection.HeadId = _Head.EmployeeId
+  association [1..1] to Z03_R_Employee as _Assistant
+    on $projection.AssistantId = _Assistant.EmployeeId
+{
+  key id                    as Id,
+      description           as Description,
+      head_id               as HeadId,
+      assistant_id          as AssistantId,
+      created_by            as CreatedBy,
+      created_at            as CreatedAt,
+      local_last_changed_by as LocalLastChangedBy,
+      local_last_changed_at as LocalLastChangedAt,
+      last_changed_at       as LastChangedAt,
+      
+      _Employee,
+      _Head,
+      _Assistant
 }
 ```
