Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -230,6 +230,15 @@ define view entity ZCDSSPFLI_B03 as select from spfli as sf
 </br>
 </br>
 </br>
+</br>
+
+## < Syntax Warning – Association Cardinality 불일치 >
+
+</br>
+</br>
+</br>
+</br>
+</br>
 
 ---
 
