--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -232,8 +232,22 @@ define view entity ZCDSSPFLI_B03 as select from spfli as sf
 </br>
 </br>
 
-## < Syntax Warning – Association Cardinality 불일치 >
+## < Association만 사용 vs 실제 JOIN 발생 조건 >
+- `_Department` 만 쓰면 관계 선언일 뿐이고, `_Department.필드` 까지 써야 JOIN 발생
+```abap
+define view entity C_Employee
+  as select from R_Employee
+    association [0..1] to R_Department as _Department   // 부서와 연결
+      on $projection.DepartmentId = _Department.Id      // 조인 조건
+{
+  key EmployeeId,               // 직원 ID (PK)
+      FirstName,                // 이름
+      LastName,                 // 성
+      DepartmentId,             // 부서 ID
 
+      _Department.DependentDesignation  // 부서 테이블 필드 접근
+}
+```
 </br>
 </br>
 </br>
