--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -248,6 +248,42 @@ define view entity C_Employee
       _Department.DependentDesignation  // 부서 테이블 필드 접근
 }
 ```
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Cds View spfli'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSPFLI_B03
+  as select from spfli as sf
+  // association 생략 시 기본값은 [0..1]
+  association [1..1] to ZCDSSCARR2_B03  as _Carrier
+  // on $projection.Carr_id = _Carrier.Carrid
+    on  sf.carrid = _Carrier.Carrid
+  association [*]    to ZCDSFLIGHT2_B03 as _flight // [0..*] 
+    on  sf.carrid = _flight.Carrid
+    and sf.connid = _flight.Connid
+{
+  key carrid            as Carr_id,
+  key connid            as Connid,
+      countryfr         as Countryfr,
+      cityfrom          as Cityfrom,
+      airpfrom          as Airpfrom,
+      countryto         as Countryto,
+      cityto            as Cityto,
+      airpto            as Airpto,
+      fltime            as Fltime,
+      deptime           as Deptime,
+      arrtime           as Arrtime,
+      @Semantics.quantity.unitOfMeasure: 'Distid'
+      distance          as Distance,
+      distid            as Distid,
+      fltype            as Fltype,
+      period            as Period,
+      _Carrier.Carrname as Carrname,
+      _flight
+
+}
+```
 </br>
 </br>
 </br>
