--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -248,6 +248,9 @@ define view entity C_Employee
       _Department.DependentDesignation  // 부서 테이블 필드 접근
 }
 ```
+- where절을 사용해 필터링 가능
+- `[0..*]` 또는 `[1..*]` 와 같이 max가 *인 관계에서 association 필드로 WHERE 조건을 주면 결과 행 수가 변할 수 있어서 사용 불가
+- `_Department._Head.LastName` 처럼 연속 Path Expression을 쓰면, Association 단계 수만큼 JOIN이 자동 생성됨
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
@@ -280,9 +283,12 @@ define view entity ZCDSSPFLI_B03
       fltype            as Fltype,
       period            as Period,
       _Carrier.Carrname as Carrname,
-      _flight
+      _flight.Fldate    as FlightDate
 
 }
+// where carrid = 'AA'     // where절 옆 필드는 db 필드 기준
+// where _flight.Seatsocc > 100     // 카디널리티가 *로 설정되어 있으므로 사용 불가
+where _Carrier.Carrid = 'AA'
 ```
 </br>
 </br>
