Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -248,9 +248,35 @@ define view entity C_Employee
       _Department.DependentDesignation  // 부서 테이블 필드 접근
 }
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < CDS WHERE·필터·집계 함수 >
 - where절을 사용해 필터링 가능
 - `[0..*]` 또는 `[1..*]` 와 같이 max가 *인 관계에서 association 필드로 WHERE 조건을 주면 결과 행 수가 변할 수 있어서 사용 불가
 - `_Department._Head.LastName` 처럼 연속 Path Expression을 쓰면, Association 단계 수만큼 JOIN이 자동 생성됨
+```abap
+where
+      <기준테이블.필드> = <값>
+  and <1:1 Association.필드> = <값>
+  // and <1:N Association.필드> = <값>   // [*] 관계이므로 사용 불가
+```
+- 집계 함수(max, min, sum, avg 등)를 사용하면, 집계 대상이 아닌 모든 필드는 반드시 group by에 포함해야 함
+- `distinct` 는 중복된 값을 제거하고 서로 다른 값만 계산하거나 조회하는 옵션
+```abap
+{
+      min( <1:N Association[조건].필드> )        as <별칭>,
+      max( <1:N Association.필드> )              as <별칭>,
+      count( distinct <1:N Association.필드> )   as <별칭>
+}
+
+group by
+      <집계가 아닌 모든 선택 필드>
+```
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
@@ -261,35 +287,40 @@ define view entity ZCDSSPFLI_B03
   // association 생략 시 기본값은 [0..1]
   association [1..1] to ZCDSSCARR2_B03  as _Carrier
   // on $projection.Carr_id = _Carrier.Carrid
-    on  sf.carrid = _Carrier.Carrid
-  association [*]    to ZCDSFLIGHT2_B03 as _flight // [0..*] 
-    on  sf.carrid = _flight.Carrid
-    and sf.connid = _flight.Connid
+  on  sf.carrid = _Carrier.Carrid
+  association [*]    to ZCDSFLIGHT2_B03 as _flight // [0..*]
+  on  sf.carrid = _flight.Carrid
+  and sf.connid = _flight.Connid
 {
-  key carrid            as Carr_id,
-  key connid            as Connid,
-      countryfr         as Countryfr,
-      cityfrom          as Cityfrom,
-      airpfrom          as Airpfrom,
-      countryto         as Countryto,
-      cityto            as Cityto,
-      airpto            as Airpto,
-      fltime            as Fltime,
-      deptime           as Deptime,
-      arrtime           as Arrtime,
-      @Semantics.quantity.unitOfMeasure: 'Distid'
-      distance          as Distance,
-      distid            as Distid,
-      fltype            as Fltype,
-      period            as Period,
-      _Carrier.Carrname as Carrname,
-      _flight.Fldate    as FlightDate
+  key carrid                as Carr_id,
+  key connid                as Connid,
+      countryfr             as Countryfr,
+      countryto             as Countryto,
+      // 필터 적용
+      // _FLight 데이터 셋 중에 Seatsocc = Seatsmax 인 데이터들 추출 (필터)
+      // 조회된 데이터 중 fldate가 가장 작은 값을 minFlight 이라는 이름으로 조회
+      min( _flight[ Seatsocc = Seatsmax ].Fldate ) as minFlight,
+      max( _flight.Fldate ) as maxFlight,
+      count( distinct _flight.Fldate ) as cntFlight,
+      
+      _Carrier,
+      _flight
+      //      _Carrier.Carrname as Carrname,
+      //      _flight.Fldate    as FlightDate
+
 
 }
 // where carrid = 'AA'     // where절 옆 필드는 db 필드 기준
 // where _flight.Seatsocc > 100     // 카디널리티가 *로 설정되어 있으므로 사용 불가
-where _Carrier.Carrid = 'AA'
+where
+  _Carrier.Carrid = 'AA'
+group by
+  carrid,
+  connid,
+  countryfr,
+  countryto
 ```
+
 </br>
 </br>
 </br>
