Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -320,6 +320,12 @@ group by
   countryfr,
   countryto
 ```
+</br>
+
+``abap
+<Association>[ <조건> ].<필드>                 as <별칭>
+<Association>[ 1: <조건> ].<필드>              as <별칭>   // 결과 1건 보장
+```
 
 </br>
 </br>
