Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -322,10 +322,48 @@ group by
 ```
 </br>
 
-``abap
+- `1:` 은 필터 결과가 최대 1건이라고 명시하는 카디널리티 선언
+- `[ <조건> ]` 은 association 내부 데이터 중 조건을 만족하는 행만 선택하는 필터 표현
+```abap
 <Association>[ <조건> ].<필드>                 as <별칭>
 <Association>[ 1: <조건> ].<필드>              as <별칭>   // 결과 1건 보장
 ```
+- Language 조건으로 조회했을 때 동일 Currency에 대해 두 행 이상 존재하면 1: 사용 시 카디널리티 위반
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Scarr CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSCARR2_B03 as select from scarr
+  association[0..*] to I_CurrencyText as _Text
+    on $projection.Currcode = _Text.Currency
+{
+  key carrid   as Carrid,   // 주석은 이렇게
+      carrname as Carrname,  // 주석 !!
+      currcode as Currcode,
+      
+      _Text[ 1: Language = $session.system_language ].CurrencyName as CurrName  // EN
+}
+```
+</br>
+</br>
+</br>
+
+## < ABAP SQL에서 Path Expression >
+- JOIN을 직접 쓰지 않고 Association 경로로 데이터를 조회하는 방식
+- `\` → Association을 시작한다는 표시
+- `\A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드를 조회한다는 의미
+```abap
+\Association-Field
+
+SELECT FROM /dmo/i_connection_R
+  FIELDS
+    AirlineId,
+    connectionid,
+    \Airline-Name
+  INTO TABLE @DATA(result).
+```
+
 
 </br>
 </br>
