Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -354,6 +354,13 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 - `\` → Association을 시작한다는 표시
 - `\A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드를 조회한다는 의미
 ```abap
+SELECT FROM <CDS_View>
+  FIELDS
+    <기준필드>,
+    \ <Association>-<필드>
+  INTO TABLE @DATA(<내부테이블>).
+```
+```abap
 \Association-Field
 
 SELECT FROM /dmo/i_connection_R
