Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -361,16 +361,17 @@ SELECT FROM <CDS_View>
   INTO TABLE @DATA(<내부테이블>).
 ```
 ```abap
-\Association-Field
+REPORT ZASSO_B03.
 
-SELECT FROM /dmo/i_connection_R
-  FIELDS
-    AirlineId,
-    connectionid,
-    \Airline-Name
-  INTO TABLE @DATA(result).
+SELECT FROM ZCDSSCARR2_B03
+  FIELDS CARRID, CARRNAME,
+         \_Text[ MANY TO ONE WHERE Language = 'E' ]-language
+  INTO TABLE @DATA(gt_result).
+
+IF sy-subrc = 0.
+  cl_demo_output=>display( gt_result ).
+ENDIF.
 ```
-
 
 </br>
 </br>
