Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -349,7 +349,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 </br>
 </br>
 
-## < ABAP SQL에서 Path Expression >
+## < ABAP SQL Association Path Expression 사용법 >
 - JOIN을 직접 쓰지 않고 Association 경로로 데이터를 조회하는 방식
 - `\` → Association을 시작한다는 표시
 - `\A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드를 조회한다는 의미
@@ -571,4 +571,45 @@ define view entity Z03_R_Department
       _Head,
       _Assistant
 }
+```
+</br>
+</br>
+</br>
+
+### 실습 4
+- ABAP SQL Association Path Expression 실습
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_C_EmployeeQuery'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_C_EmployeeQuery as select from Z03_R_Employee
+{
+    key EmployeeId,
+    FirstName,
+    LastName,
+    DepartmentId,
+    
+    _Department.Description as DepartmentDescription,
+    _Department._Assistant.LastName as AssistantName,
+    
+    _Department
+}
+```
+```abap
+CLASS Z03_C_EMPLOYEQUERY IMPLEMENTATION.
+  METHOD if_oo_adt_classrun~main.
+    SELECT FROM Z03_C_EmployeeQuery
+        FIELDS employeeid,
+               firstname,
+               lastname,
+               departmentid,
+
+               DepartmentDescription,
+               AssistantName,
+               \_Department\_Head-LastName as HEADNAME
+    INTO TABLE @DATA(result).
+    out->write( result ).
+  ENDMETHOD.
+ENDCLASS.
 ```
