Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -14,7 +14,7 @@
 </br>
 
 ## < Annotation Propagation (필드 참조 + 애노테이션 전파) >
-- 필드(Element) 애노테이션은 상위 View로 자동 전파되고, View Entity 애노테이션은 전파되지 않음
+- 필드(Element) 애노테이션(금액 설정(@Semantics)이나 라벨(@EndUserText)처럼 특정 필드에 붙인 설정)은 상위 View로 자동 전파되고, View Entity 애노테이션(권한 체크(@AccessControl)나 뷰 전체 설명)은 전파되지 않음
 - `@Metadata.ignorePropagatedAnnotations: ` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함
 - 상위 View에서는 이미 하위 View에서 정의된 별칭(Carrid, Price 등)을 그대로 필드명으로 사용하기 때문에 다시 as를 쓸 필요가 없음
   
