--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -114,7 +114,8 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 </br>
 
 ## < ABAP Dictionary에서 Foreign Key 설정 문법 >
-
+- **왼쪽 (Source/내 테이블)** : 최소 0건에서 최대 여러 건(*)의 데이터가 존재할 수 있음
+- **오른쪽 (Target/체크 테이블)** : 반드시 1건의 기준 데이터가 존재해야 함
 - `[1,1]` → Source 1건은 Target 1건과 매핑 (일대일)
 - `[0..1,1]` → Source 1건당 Target이 없거나 1건
 - `[1..*,1]` → 여러 Source가 Target 1건을 참조 (다대일)
