--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -114,8 +114,8 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 </br>
 
 ## < ABAP Dictionary에서 Foreign Key 설정 문법 >
-- **왼쪽 (Source/내 테이블)** : 최소 0건에서 최대 여러 건(*)의 데이터가 존재할 수 있음
-- **오른쪽 (Target/체크 테이블)** : 반드시 1건의 기준 데이터가 존재해야 함 (여러 명의 직원(Source)이 하나의 부서(Target)에 소속된다)
+- 왼쪽 (Source/내 테이블)  : 최소 0건 ~ 최대 여러 건(*) 존재 가능
+- 오른쪽 (Target/체크 테이블) : 최소 0건 ~ 최대 여러 건(*) 존재 가능
 ```abap
 " [ForeignKey Table(Source), Check Table(Target)]
 " [1,1]      → Source 1건은 Target 1건과 매핑 (일대일)
