Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -496,6 +496,7 @@ define view ZCDSEMPINFO_B03 as select from ztempinfo_b03
 </br>
 
 - DB Table `z03depment` Foreign Key 설정
+- `@AbapCatalog.foreignKey.screenCheck` 은 기본값이 true이며, false로 설정하면 화면 입력 시 외래키 체크를 수행하지 않도록 함
 ```abap
 @EndUserText.label : 'Department (with Foreign Key Relations)'
 @AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
