Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -160,7 +160,7 @@ define view entity R_Employee
       department_id as DepartmentId
 }
 ```
-- Association의 `[min..max]` 는 Source 1건 기준으로 Target이 몇 건 연결되는지를 나타냄
+- Association의 `[min..max]` 는 Target 테이블에서 ON 조건에 따라 매칭했을 때, 반환될 수 있는 결과 행(Row)의 최소~최대 개수를 의미
 ```abap
 association [min..max] to TargetView as _Assoc
 ```
