Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -622,3 +622,15 @@ CLASS Z03_C_EMPLOYEQUERY IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
+```abap
+define view entity ZI_Employee as select from zemp
+  association [ ? ] to zdept as _Department
+    on $projection.DeptCode = _Department.dept_id
+{
+  key emp_no as EmployeeNumber,
+  dept_code as DeptCode
+}
+
+association [0..*] to scarr as _Carrier
+  on $projection.CarrierId = _Carrier.carrid
+```
