Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -623,14 +623,13 @@ CLASS Z03_C_EMPLOYEQUERY IMPLEMENTATION.
 ENDCLASS.
 ```
 ```abap
-define view entity ZI_Employee as select from zemp
-  association [ ? ] to zdept as _Department
-    on $projection.DeptCode = _Department.dept_id
+define view entity ZI_FlightInfo
+  as select from spfli
+  association [ ? ] to sap_planes as _Plane
+    on $projection.CarrierId = _Plane.CARRID
 {
-  key emp_no as EmployeeNumber,
-  dept_code as DeptCode
+  key carrid as CarrierId,
+  key connid as ConnectionId,
+      _Plane
 }
-
-association [0..*] to scarr as _Carrier
-  on $projection.CarrierId = _Carrier.carrid
 ```
