Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -256,6 +256,20 @@ define view entity C_Employee
       _Department.DependentDesignation  // 부서 테이블 필드 접근
 }
 ```
+```abap
+define view entity C_Employee
+  as select from R_Employee
+    association [0..1] to R_Department as _Department   // 부서와 연결
+      on $projection.DepartmentId = _Department.Id      // 조인 조건
+{
+  key EmployeeId,               // 직원 ID (PK)
+      FirstName,                // 이름
+      LastName,                 // 성
+      DepartmentId,             // 부서 ID
+
+      _Department               // 조인 발생 X
+}
+```
 </br>
 </br>
 
