--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -282,8 +282,7 @@ define view entity C_Employee
 - `[0..*]` 또는 `[1..*]` 와 같이 max가 *인 관계에서 association 필드로 WHERE 조건을 주면 결과 행 수가 변할 수 있어서 사용 불가
 - `_Department._Head.LastName` 처럼 연속 Path Expression을 쓰면, Association 단계 수만큼 JOIN이 자동 생성됨
 ```abap
-where
-      <기준테이블.필드> = <값>
+where <기준테이블.필드> = <값>
   and <1:1 Association.필드> = <값>
   // and <1:N Association.필드> = <값>   // [*] 관계이므로 사용 불가
 ```
