--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -287,13 +287,16 @@ where <기준테이블.필드> = <값>
   // and <1:N Association.필드> = <값>   // [*] 관계이므로 사용 불가
 ```
 
-| WHERE 절에서 Association 필드 사용 (예: WHERE _Dept.Name = 'A') | SELECT { } 영역에서 Association 필드 사용 (예: _Dept.Name) | 실제 SQL JOIN 발생 여부 |
-|------------------------------------------------------------------|-------------------------------------------------------------|--------------------------|
-| X                                                                | X                                                           | No (조인 안 발생)        |
-| X                                                                | O                                                           | Yes (출력 위해 JOIN)     |
-| O                                                                | X                                                           | Yes (조건 필터 위해 JOIN)|
-| O                                                                | O                                                           | Yes (당연히 발생)        |
+- `WHERE` 사용 → 예: WHERE _Dept.Name = 'A'
+- `SELECT { }` 사용 → 예: _Dept.Name
+- 둘 다 안 쓰면 → Association은 관계만 정의, 실제 JOIN 안 발생
 
+| WHERE 사용 | SELECT { } 사용 | JOIN 발생 |
+|------------|----------------|-----------|
+| X          | X              | No        |
+| X          | O              | Yes       |
+| O          | X              | Yes       |
+| O          | O              | Yes       |
 
 - 집계 함수(max, min, sum, avg 등)를 사용하면, 집계 대상이 아닌 모든 필드는 반드시 group by에 포함해야 함
 - `distinct` 는 중복된 값을 제거하고 서로 다른 값만 계산하거나 조회하는 옵션
