Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -280,7 +280,7 @@ define view entity C_Employee
 ## < CDS WHERE·필터·집계 함수 >
 </br>
 
-### < CDS WHERE >
+### 1) CDS WHERE 
 - where절을 사용해 필터링 가능
 - `[0..*]` 또는 `[1..*]` 와 같이 max가 *인 관계에서 association 필드로 WHERE 조건을 주면 결과 행 수가 변할 수 있어서 사용 불가
 - `_Department._Head.LastName` 처럼 연속 Path Expression을 쓰면, Association 단계 수만큼 JOIN이 자동 생성됨
@@ -305,7 +305,7 @@ where <기준테이블.필드> = <값>
 </br>
 </br>
 
-### < CDS 집계함수 >
+### 2) CDS 집계함수 
 
 - 집계함수를 사용하려면 Association의 Target Cardinality는 * 이어야 함
 - 집계 함수(max, min, sum, avg 등)를 사용하면, 집계 대상이 아닌 모든 필드는 반드시 group by에 포함해야 함
@@ -365,9 +365,8 @@ group by
 ```
 </br>
 </br>
-</br>
 
-### < CDS 필터 >
+### 3) CDS 필터 
 
 - `1:` 은 필터 결과가 최대 1건이라고 명시하는 카디널리티 선언
 - `[ <조건> ]` 은 association 내부 데이터 중 조건을 만족하는 행만 선택하는 필터 표현
