Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -308,6 +308,7 @@ where <기준테이블.필드> = <값>
 ### 2) CDS 집계함수 
 
 - 집계함수를 사용하려면 Association의 Target Cardinality는 * 이어야 함
+- 집계하기 직전에 `_flight[ Seatsocc = Seatsmax ]` 처럼 특정 조건에 맞는 데이터만 골라낸 뒤 집계할 수 있음
 - 집계 함수(max, min, sum, avg 등)를 사용하면, 집계 대상이 아닌 모든 필드는 반드시 group by에 포함해야 함
 - `distinct` 는 중복된 값을 제거하고 서로 다른 값만 계산하거나 조회하는 옵션
 ```abap
