Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -390,6 +390,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
       currcode as Currcode,
       
       _Text[ 1: Language = $session.system_language ].CurrencyName as CurrName  // EN
+      // 접속 언어(Language) 조건으로 검색했을 때, 이 통화(Currency)에 연결된 텍스트 데이터는 단 한 줄뿐
 }
 ```
 </br>
