Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -400,6 +400,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 ## < ABAP SQL Association Path Expression 사용법 >
 - JOIN을 직접 쓰지 않고 Association 경로로 데이터를 조회하는 방식
 - `\` → Association을 시작한다는 표시
+- `-` (하이픈): 통로 끝에 도달해서 "이 필드를 가져와!"라고 지정하는 구분자
 - `\A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드를 조회한다는 의미
 ```abap
 SELECT FROM <CDS_View>
