Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -402,6 +402,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 - `\` → Association을 시작한다는 표시
 - `-` (하이픈): 통로 끝에 도달해서 "이 필드를 가져와!"라고 지정하는 구분자
 - `\A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드를 조회한다는 의미
+- `MANY TO ONE` → 여러 개(MANY) 중에서 하나(ONE)를 골라내는 경로라는 것을 ABAP 컴파일러에게 알려줌
 ```abap
 SELECT FROM <CDS_View>
   FIELDS
