Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -633,6 +633,7 @@ define view entity Z03_R_Department
 
 ### 실습 4
 - ABAP SQL Association Path Expression 실습
+- `_Department` <-- 이렇게 하위에 이름이 나와 있어야 상위에서 부를 수 있음
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
