Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -117,17 +117,13 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 - 왼쪽 (Source/내 테이블)  : 최소 0건 ~ 최대 여러 건(*) 존재 가능
 - 오른쪽 (Target/체크 테이블) : 최소 0건 ~ 최대 여러 건(*) 존재 가능
 ```abap
-" [ Target(상대방), Source(나) ] 순서로 작성
-" [1, 1]      → Source 1건당 Target이 반드시 1건 매핑 (1:1)
-" [0..1, 1]   → Source 1건당 Target이 없거나 최대 1건 (0..1:1)
-" [1, 1..*]   → Target 1건을 여러 Source가 참조 (필수 참조 다대일)
-" [1, 0..*]   → Target 1건을 여러 Source가 참조 가능 (옵션 참조 다대일)
+" [ForeignKey Table(Source), Check Table(Target)]
 
-" 추가: Source가 0..1인 경우 (나도 있을 수도, 없을 수도 있는 관계)
-" [1, 0..1]   → Target 1건당 Source가 없거나 최대 1건 매핑
-" [0..1, 0..1] → 서로가 서로를 가질 수도, 안 가질 수도 있는 선택적 1:1
-
-with foreign key [0..*, 1]
+" [1,1]           → 양쪽 모두 반드시 1건 (필수 1:1)
+" [0..1,1]        → Source는 옵션, Target은 필수
+" [1,0..1]        → Source는 필수, Target은 옵션
+" [0..1,0..1]     → 양쪽 모두 옵션 (서로 없어도 됨)
+" [0..*,1]        → 여러 Source가 Target 1건 참조
 ```
 ```abap
 define table employee {
