--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -119,11 +119,12 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 ```abap
 " [ForeignKey Table(Source), Check Table(Target)]
 
-" [1,1]           → 양쪽 모두 반드시 1건 (필수 1:1)
-" [0..1,1]        → Source는 옵션, Target은 필수
+" [1,1]       → Source 1건 ↔ Target 1건 (필수 일대일)
+" [0..1,1]    → Source 1건 ↔ Target 0 또는 1건 (옵션 일대일)
 " [1,0..1]        → Source는 필수, Target은 옵션
+" [1..*,1]    → 여러 Source ↔ Target 1건 (다대일)
+" [0..*,1]    → 여러 Source(옵션 포함) ↔ Target 1건
 " [0..1,0..1]     → 양쪽 모두 옵션 (서로 없어도 됨)
-" [0..*,1]        → 여러 Source가 Target 1건 참조
 ```
 ```abap
 define table employee {
