Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -119,11 +119,11 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 ```abap
 " [ForeignKey Table(Source), Check Table(Target)]
 
-" [1,1]       → Source 1건 ↔ Target 1건 (필수 일대일)
-" [0..1,1]    → Source 1건 ↔ Target 0 또는 1건 (옵션 일대일)
-" [1..*,1]    → 여러 Source ↔ Target 1건 (다대일)
-" [0..*,1]    → 여러 Source(옵션 포함) ↔ Target 1건
-" [0..1,0..1]     → 양쪽 모두 옵션 (서로 없어도 됨)
+" [1,1]      : Source 1개 ↔ Target 1개 (필수 일대일)
+" [0..1,1]   : Source 1개당 Target이 없거나 1개 (옵션 일대일)
+" [1..*,1]   : 여러 Source가 Target 1개 참조 (다대일)
+" [0..*,1]   : 여러 Source가 Target을 참조하되, Source가 없을 수도 있음 (옵션 포함 다대일)
+" [0..1,0..1] : 양쪽 모두 옵션 (서로 없어도 됨)
 ```
 ```abap
 define table employee {
