Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -376,6 +376,9 @@ group by
 <Association>[ 1: <조건> ].<필드>              as <별칭>   // 결과 1건 보장
 ```
 - Language 조건으로 조회했을 때 동일 Currency에 대해 두 행 이상 존재하면 1: 사용 시 카디널리티 위반
+
+  - 정상: EN으로 된 이름이 'United States Dollar' 딱 하나일 때.
+  - 에러: EN으로 된 이름이 'Dollar'와 'US Dollar' 두 개가 있을 때.
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
