--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -1,1 +1,18 @@
+## <  핵심 개념 >
+- **1) Annotation Propagation (필드 참조 + 애노테이션 전파)**
+- **2) ABAP Dictionary에서 Foreign Key 설정 문법**
+- **3) CDS Association**
+- **4) Syntax Warning – Association Cardinality 불일치**
+- **5) Association만 사용 vs 실제 JOIN 발생 조건**
+- **6) CDS WHERE·필터·집계 함수**
+- **7) ABAP SQL Association Path Expression 사용법**
+</br>
+</br>
 
+---
+
+</br>
+
+## < 실습 코드 >
+
+<img width="389" height="221" alt="image" src="https://github.com/user-attachments/assets/8723014f-1020-4f66-b038-50d2e525cb91" />
