Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="433" height="95" alt="image" src="https://github.com/user-attachments/assets/29badbdf-f801-4ca1-81e4-d7ffa2d8e8c0" />## <  핵심 개념 >
 - **1) Annotation Propagation (필드 참조 + 애노테이션 전파)**
 - **2) ABAP Dictionary에서 Foreign Key 설정 문법**
 - **3) CDS Association**
@@ -23,3 +23,87 @@
 </br>
 
 **1) DB Table 생성**
+- ztstudent_c203
+```abap
+@EndUserText.label : 'ZTSTUDENT_C203'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+@AbapCatalog.tableCategory : #TRANSPARENT
+@AbapCatalog.deliveryClass : #A
+@AbapCatalog.dataMaintenance : #ALLOWED
+define table ztstudent_c203 {
+
+  key client : abap.clnt not null;
+  key itemid : zdeitemidb03 not null;
+  itemname   : zdeitemnameb03;
+  itemtype   : zdeitemtypeb03;
+  itemnum    : zdeitemnumb03;
+
+}
+```
+- ztstudent_c203t
+```abap
+@EndUserText.label : 'Text table'
+@AbapCatalog.enhancement.category : #NOT_EXTENSIBLE
+@AbapCatalog.tableCategory : #TRANSPARENT
+@AbapCatalog.deliveryClass : #A
+@AbapCatalog.dataMaintenance : #ALLOWED
+define table ztstudent_c203t {
+
+  key client : abap.clnt not null;
+  @AbapCatalog.foreignKey.screenCheck : false
+  key itemid : zdeitemidb03 not null
+    with foreign key ztstudent_c203
+      where client = ztstudent_c203t.client
+        and itemid = ztstudent_c203t.itemid;
+  @AbapCatalog.foreignKey.screenCheck : false
+  key langu  : langu not null
+    with foreign key t002
+      where spras = ztstudent_c203t.langu;
+  item_text  : zdeitemtextb03;
+
+}
+```
+</br>
+
+**2) CDS 생성**
+- ZCDSSTUDENT_C203
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'ZCDSSTUDENT_C203'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSTUDENT_C203 as select from ztstudent_c203
+    association [1..1] to ZCDSSTUDENT_C203T as _Student
+        on $projection.Itemid = _Student.Itemid
+{
+    key itemid as Itemid,
+    itemname as Itemname,
+    itemtype as Itemtype,
+    itemnum as Itemnum,
+    _Student[ 1: Langu = 'E' ].ItemText as Itemtext,
+    
+    _Student
+}
+```
+- ZCDSSTUDENT_C203T
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'text table'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSTUDENT_C203T as select from ztstudent_c203t
+{
+    key itemid as Itemid,
+    key langu as Langu,
+    item_text as ItemText
+}
+```
+</br>
+
+**3) 결과 확인**
+
+- 한국어버전
+<img width="432" height="96" alt="image" src="https://github.com/user-attachments/assets/c8262db2-46fd-459c-8a32-9b9ca9b147ab" />
+
+- 영어버전
+<img width="433" height="95" alt="image" src="https://github.com/user-attachments/assets/9ca94da5-41b7-4efe-a653-be44a70f920c" />
