--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -119,11 +119,11 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 ```abap
 " [ForeignKey Table(Source), Check Table(Target)]
 
-" [1,1] → Source 1건은 Target 1건과 매핑 (일대일)
-" [0..1,1] → Source 1건당 Target이 없거나 1건
-" [1..*,1] → 여러 Source가 Target 1건 참조 (다대일)
-" [0..*,1] → 여러 Source가 Target 1건 참조 가능 (옵션 포함 다대일)
-" [0..1,0..1]     → 양쪽 모두 옵션 (서로 없어도 됨)
+" [1,1]       → Source 1건은 Target 1건과 반드시 연결, Target도 Source 1건만 가질 수 있음
+" [0..1,1]    → Source는 Target과 연결 안 될 수도 있고 되면 1건, Target은 Source 1건 반드시 필요
+" [1..*,1]    → Source는 반드시 Target 1건과 연결, 여러 Source가 같은 Target에 연결 가능
+" [0..*,1]    → Source는 연결 안 될 수도 있고 되면 1건, 여러 Source가 같은 Target에 연결 가능
+" [0..1,0..1] → Source와 Target 모두 선택적, 서로 없어도 됨
 ```
 ```abap
 define table employee {
