--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -379,6 +379,7 @@ group by
 
   - 정상: EN으로 된 이름이 'United States Dollar' 딱 하나일 때.
   - 에러: EN으로 된 이름이 'Dollar'와 'US Dollar' 두 개가 있을 때.
+- `$session.system_language` : 현재 로그인한 사용자의 SAP 세션 언어값 (예: KO, EN 등)
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
