Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -405,10 +405,10 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 - JOIN을 직접 쓰지 않고 Association 경로로 데이터를 조회하는 방식
 - 상위 뷰는 하위 뷰를 select 하면, 그 안의 Association 경로도 함께 물려받아 그대로 사용할 수 있음 (재정의 불필요)
 - 상위 뷰에서 `select from 하위뷰` 하면, 하위 뷰가 SELECT 해둔 일반 필드는 경로 없이 바로 SELECT 가능함
-- `\` → Association을 시작한다는 표시
-- `-` (하이픈): 통로 끝에 도달해서 "이 필드를 가져와!"라고 지정하는 구분자
-- `\A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드를 조회한다는 의미
-- `MANY TO ONE` → 여러 개(MANY) 중에서 하나(ONE)를 골라내는 경로라는 것을 ABAP 컴파일러에게 알려줌
+- `\` → Association 시작 표시
+- `-` → Association 끝에서 실제 필드를 지정하는 구분자
+- `\_A\_B-Field` → Association을 연속으로 타고 들어가 최종 필드 조회
+- `MANY TO ONE` → 여러 건 중 1건으로 좁히는 경로임을 컴파일러에게 명시
 ```abap
 SELECT FROM <CDS_View>
   FIELDS
