Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -242,6 +242,7 @@ define view entity ZCDSSPFLI_B03 as select from spfli as sf
 
 ## < Association만 사용 vs 실제 JOIN 발생 조건 >
 - `_Department` 만 쓰면 관계 선언일 뿐이고, `_Department.필드` 까지 써야 JOIN 발생
+- 이 뷰를 다른 상위 뷰에서 select from으로 참조하거나, Report 프로그램에서 Path Expression(\)을 써서 타고 들어갈 계획이라면 `_Department` 사용
 ```abap
 define view entity C_Employee
   as select from R_Employee
