Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -80,9 +80,7 @@ define view entity ZCDSSTUDENT_C203 as select from ztstudent_c203
     itemname as Itemname,
     itemtype as Itemtype,
     itemnum as Itemnum,
-    _Student[ 1: Langu = 'E' ].ItemText as Itemtext,
-    
-    _Student
+    _Student[ 1: Langu = 'E' ].ItemText as Itemtext
 }
 ```
 - ZCDSSTUDENT_C203T
