Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -13,6 +13,23 @@
 
 </br>
 
+## < CDS View 안에 SQL 로직 넣기 >
+- 계산은 CDS에서, 조회는 ABAP에서 수행
+```abap
+SELECT FROM ZS4D430_SQL_Logic
+  FIELDS carrier_id,
+         seats_free
+  INTO TABLE @DATA(result).
+```
+```abap
+define view entity ZS4D430_SQL_Logic
+  as select from /dmo/flight
+{
+  key carrier_id,
+
+  seats_max - seats_occupied as seats_free
+}
+```
 
 </br>
 </br>
