Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -13,7 +13,7 @@
 
 </br>
 
-## < CDS View 안에 SQL 로직 넣기 >
+## < CDS에서 산술 연산(계산 필드) 가능 >
 - 계산은 CDS에서, 조회는 ABAP에서 수행
 ```abap
 SELECT FROM ZS4D430_SQL_Logic
