Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -34,6 +34,54 @@ define view entity ZS4D430_SQL_Logic
 </br>
 
 ### 2) CDS에서 Literal(고정값) 사용 가능
+- ABAP SQL에서 Literal 사용
+- 정수는 가능하지만, SELECT 안에서 소수점(예: 1.5) 같은 실수 Literal은 직접 사용 제한적
+```abap
+SELECT FROM ...
+  FIELDS 'Hello' AS Character,
+         1       AS Integer1,
+        -1       AS Integer2
+  INTO TABLE @DATA(result).
+```
+- ABAP CDS에서 Literal 사용
+- 정수, 큰 정수, 소수점(예: 1.5)까지 다양한 타입 Literal 지원
+```abap
+define view entity Z_Literal_Example
+  as select from ...
+{
+  'Hello' as Character1,   // 문자 리터럴 → CHAR 타입
+  '4711'  as Character2,   // 숫자 형태 문자열 → NUMC 타입으로 인식
+  1       as Integer1,     // 작은 정수 → INT1 범위
+ -1       as Integer2,     // 음수 정수 → INT1 범위
+  256     as Integer3,     // 더 큰 정수 → INT2 범위
+  32768   as Integer4,     // 큰 정수 → INT4 범위
+  1.5     as Float1        // 소수 리터럴 → FLTP(부동소수점)
+}
+```
+</br>
+</br>
+
+### 3) CDS에서 CAST로 타입 변환 가능
+- CDS는 CAST를 이용해 조회 시점에 데이터 타입을 원하는 형식으로 변환 가능
+- CDS는 CAST 시 기본 타입뿐 아니라 Data Element 기준으로도 변환 가능하며, 메타데이터까지 상속됨
+- `preserving type` 은 Data Element의 원래 기술적 속성(길이, 도메인 등)을 그대로 유지하라는 옵션
+```abap
+define view entity ZS4D430_Sql02_Cast
+  as select from /dmo/flight
+{
+  '19891109' as numc8,                       // 문자열 리터럴 → 기본 NUMC(8) 형태
+
+  cast( '19891109' as abap.char(8) )   as char8,     // 문자형 CHAR(8)로 변환
+  cast( '19891109' as abap.int4 )      as int4,      // 정수형 INT4로 변환
+  cast( '19891109' as abap.dec(10,2) ) as dec10_2,   // 소수 포함 DEC(10,2)로 변환
+  cast( '19891109' as abap.fltp )      as fltp,      // 부동소수점 FLTP로 변환
+  cast( '19891109' as abap.dats )      as dats       // 날짜형 DATS(YYYYMMDD → 날짜)로 변환
+
+  cast( '19891109' as /dmo/flight_date )                as fldate,    // flight_date 데이터 엘리먼트 타입 적용
+  cast( '19891109' as /dmo/travel_id preserving type )  as travelid   // travel_id 타입 + DDIC 속성 유지
+}
+```
+
 
 
 </br>
