--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -81,7 +81,16 @@ define view entity ZS4D430_Sql02_Cast
   cast( '19891109' as /dmo/travel_id preserving type )  as travelid   // travel_id 타입 + DDIC 속성 유지
 }
 ```
+</br>
 
+| From            | To                          | 비고                         |
+|---------------|----------------------------|------------------------------|
+| CHAR          | CHAR, NUMC, UNIT, CUKY     | 길이가 충분해야 함           |
+| NUMC          | CHAR, NUMC                 |                              |
+| DEC, CURR, QUAN | DEC, CURR, QUAN, FLTP     |                              |
+| FLTP          | DEC, CURR, QUAN            |                              |
+| DATS, TIMS    | CHAR                       | 날짜를 문자열로 다룰 때 사용 |
+| INT1, INT2, INT4 | INT, DEC, FLTP          |                              |
 
 
 </br>
