Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -83,6 +83,30 @@ define view entity ZS4D430_Sql02_Cast
 ```
 </br>
 
+### 3-1) 나누기 연산 시 CAST가 필요한 이유
+- 정수 ÷ 정수는 소수점이 잘려서 정확한 값이 나오지 않음 (예: 1/2 = 0)
+- 그래서 퍼센트 계산 시 `cast(... as abap.fltp)` 로 먼저 실수 타입으로 바꿔줘야 함
+```abap
+SELECT FROM /dmo/flight
+  FIELDS
+    seats_max - seats_occupied     AS seats_available,
+    ( CAST( seats_occupied AS FLTP )
+      * CAST( 100 AS FLTP )
+    ) / CAST( seats_max AS FLTP )  AS percentage_fltp
+  INTO TABLE @DATA(result).
+```
+```abap
+define view entity ...
+  as select from /dmo/flight
+{
+  seats_max - seats_occupied            as seats_available,
+  ( cast( seats_occupied as abap.fltp )
+    * 100.0
+  ) / cast( seats_max as abap.fltp )    as percentage_fltp
+}
+```
+
+
 | From            | To                          | 비고                         |
 |---------------|----------------------------|------------------------------|
 | CHAR          | CHAR, NUMC, UNIT, CUKY     | 길이가 충분해야 함           |
