Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -82,6 +82,7 @@ define view entity ZS4D430_Sql02_Cast
 }
 ```
 </br>
+</br>
 
 ### 3-1) 나누기 연산 시 CAST가 필요한 이유
 - 정수 ÷ 정수는 소수점이 잘려서 정확한 값이 나오지 않음 (예: 1/2 = 0)
@@ -106,6 +107,7 @@ define view entity ...
 }
 ```
 
+-**CDS / ABAP CAST 가능 타입 매핑표**
 
 | From            | To                          | 비고                         |
 |---------------|----------------------------|------------------------------|
