Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -87,6 +87,10 @@ define view entity ZS4D430_Sql02_Cast
 ### 3-1) 나누기 연산 시 CAST가 필요한 이유
 - 정수 ÷ 정수는 소수점이 잘려서 정확한 값이 나오지 않음 (예: 1/2 = 0)
 - 그래서 퍼센트 계산 시 `cast(... as abap.fltp)` 로 먼저 실수 타입으로 바꿔줘야 함
+
+</br>
+
+- ABAP SQL에서 산술 연산
 ```abap
 SELECT FROM /dmo/flight
   FIELDS
@@ -96,6 +100,7 @@ SELECT FROM /dmo/flight
     ) / CAST( seats_max AS FLTP )  AS percentage_fltp
   INTO TABLE @DATA(result).
 ```
+- CDS에서 산술 연산
 ```abap
 define view entity ...
   as select from /dmo/flight
