Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -112,7 +112,7 @@ define view entity ...
 }
 ```
 
--**CDS / ABAP CAST 가능 타입 매핑표**
+**- CDS / ABAP CAST 가능 타입 매핑표**
 
 | From            | To                          | 비고                         |
 |---------------|----------------------------|------------------------------|
