Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -34,7 +34,7 @@ define view entity ZS4D430_SQL_Logic
 </br>
 
 ### 2) CDS에서 Literal(고정값) 사용 가능
-- ABAP SQL에서 Literal 사용
+#### 1) ABAP SQL에서 Literal 사용
 - 정수는 가능하지만, SELECT 안에서 소수점(예: 1.5) 같은 실수 Literal은 직접 사용 제한적
 ```abap
 SELECT FROM ...
@@ -43,7 +43,7 @@ SELECT FROM ...
         -1       AS Integer2
   INTO TABLE @DATA(result).
 ```
-- ABAP CDS에서 Literal 사용
+#### 2) ABAP CDS에서 Literal 사용
 - 정수, 큰 정수, 소수점(예: 1.5)까지 다양한 타입 Literal 지원
 ```abap
 define view entity Z_Literal_Example
@@ -125,6 +125,24 @@ define view entity ...
 | DATS, TIMS    | CHAR                       | 날짜를 문자열로 다룰 때 사용 |
 | INT1, INT2, INT4 | INT, DEC, FLTP          |                              |
 
+</br>
+</br>
+
+### 3-1) 나누기 연산 시 CAST가 필요한 이유
+```abap
+case operand
+  when operand1 then result1
+  when operand2 then result2
+  else resultN
+end
+```
+```abap
+case
+  when sql_condition1 then result1
+  when sql_condition2 then result2
+  else resultN
+end
+```
 
 </br>
 </br>
