--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -90,7 +90,7 @@ define view entity ZS4D430_Sql02_Cast
 
 </br>
 
-- ABAP SQL에서 산술 연산
+#### 1) ABAP SQL에서 산술 연산
 ```abap
 SELECT FROM /dmo/flight
   FIELDS
@@ -100,7 +100,7 @@ SELECT FROM /dmo/flight
     ) / CAST( seats_max AS FLTP )  AS percentage_fltp
   INTO TABLE @DATA(result).
 ```
-- CDS에서 산술 연산
+#### 2) CDS에서 산술 연산
 ```abap
 define view entity ...
   as select from /dmo/flight
@@ -129,6 +129,8 @@ define view entity ...
 </br>
 
 ### 3-1) 나누기 연산 시 CAST가 필요한 이유
+#### 1) Simple Case Distinction (단순 CASE 문)
+- ABAP의 `CASE ... WHEN ... ENDCASE` 와 유사하며, 특정 값과의 `=` 비교로 결과가 결정됨
 ```abap
 case operand
   when operand1 then result1
@@ -136,6 +138,10 @@ case operand
   else resultN
 end
 ```
+
+#### 2) Complex Case Distinction (복잡/검색 CASE 문)
+- ABAP의 `IF ... ELSEIF ... ENDIF` 와 유사하며, `AND·OR·<·>` 등 복합 조건 사용 가능
+- 조건은 위에서 아래로 순차 평가되며, 먼저 참이 되는 조건이 선택됨
 ```abap
 case
   when sql_condition1 then result1
