Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -128,26 +128,28 @@ define view entity ...
 </br>
 </br>
 
-### 3-1) 나누기 연산 시 CAST가 필요한 이유
+### 4) CDS CASE 구문 정리 (Simple vs Complex 분기 구조)
 #### 1) Simple Case Distinction (단순 CASE 문)
 - ABAP의 `CASE ... WHEN ... ENDCASE` 와 유사하며, 특정 값과의 `=` 비교로 결과가 결정됨
 ```abap
 case operand
   when operand1 then result1
   when operand2 then result2
-  else resultN
-end
+  -- ... 필요한 만큼 추가 가능
+  else resultn
+end as 필드명
 ```
 
 #### 2) Complex Case Distinction (복잡/검색 CASE 문)
 - ABAP의 `IF ... ELSEIF ... ENDIF` 와 유사하며, `AND·OR·<·>` 등 복합 조건 사용 가능
 - 조건은 위에서 아래로 순차 평가되며, 먼저 참이 되는 조건이 선택됨
 ```abap
-case
+case 
   when sql_condition1 then result1
   when sql_condition2 then result2
-  else resultN
-end
+  -- ... 필요한 만큼 추가 가능
+  else resultn
+end as 필드명
 ```
 
 </br>
