Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -129,6 +129,8 @@ define view entity ...
 </br>
 
 ### 4) CDS CASE 구문 정리 (Simple vs Complex 분기 구조)
+- case 뒤에는 별칭을 쓸 수 없고, 반드시 실제 컬럼명(또는 표현식)만 와야 함
+  
 #### 1) Simple Case Distinction (단순 CASE 문)
 - ABAP의 `CASE ... WHEN ... ENDCASE` 와 유사하며, 특정 값과의 `=` 비교로 결과가 결정됨
 ```abap
