--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -116,15 +116,14 @@ define view entity ...
 
 **- CDS / ABAP CAST 가능 타입 매핑표**
 
-| From            | To                          | 비고                         |
-|---------------|----------------------------|------------------------------|
-| CHAR          | CHAR, NUMC, UNIT, CUKY     | 길이가 충분해야 함           |
-| NUMC          | CHAR, NUMC                 |                              |
-| DEC, CURR, QUAN | DEC, CURR, QUAN, FLTP     |                              |
-| FLTP          | DEC, CURR, QUAN            |                              |
-| DATS, TIMS    | CHAR                       | 날짜를 문자열로 다룰 때 사용 |
-| INT1, INT2, INT4 | INT, DEC, FLTP          |                              |
-
+| From              | From 타입 설명                    | To                          | 비고                         |
+|------------------|-----------------------------------|----------------------------|------------------------------|
+| CHAR             | 일반 문자형 데이터                | CHAR, NUMC, UNIT, CUKY     | 길이가 충분해야 함           |
+| NUMC             | 숫자 전용 문자형                  | CHAR, NUMC                 |                              |
+| DEC, CURR, QUAN  | 소수/금액/수량 타입               | DEC, CURR, QUAN, FLTP      |                              |
+| FLTP             | 부동소수점(실수) 타입             | DEC, CURR, QUAN            |                              |
+| DATS, TIMS       | 날짜(YYYYMMDD) / 시간(HHMMSS)     | CHAR                       | 날짜를 문자열로 변환 시 사용 |
+| INT1, INT2, INT4 | 정수 타입(1·2·4바이트 크기 구분)  | INT, DEC, FLTP             |                              |
 </br>
 </br>
 
