Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -152,7 +152,70 @@ case
   else resultn
 end as 필드명
 ```
+</br>
 
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'SBOOK CDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSBOOK_B03
+  as select from sbook
+{
+  key carrid     as Carrid,
+  key connid     as Connid,
+  key fldate     as Fldate,
+  key bookid     as Bookid,
+      customid   as Customid,
+      custtype   as Custtype,
+
+      case custtype             // Simple Case
+        when 'P' then 'Private Customer'
+        when 'B' then 'Business Customer'
+        else          ' '
+      end        as Cust_Text,
+      smoker     as Smoker,
+      @Semantics.quantity.unitOfMeasure: 'Wunit'
+      luggweight as Luggweight,
+
+      // Complex Case
+      case when luggweight < 25 then 'B'
+           when luggweight >= 25 and luggweight < 40 then 'A'
+           else ' '
+      end        as Lugg_State,
+
+      wunit      as Wunit,
+      invoice    as Invoice,
+      class      as Class,
+
+      case class
+        when 'F' then 'First'
+        when 'C' then 'Business'
+        when 'Y' then 'Economy'
+        else '잘못된 유형의 좌석코드 입니다'
+      end        as Class_Text,
+      
+      case when class != 'F'
+        then case when wunit = 'KG' and luggweight > 20 then 'X'
+                  when wunit = 'LB' and luggweight > 40 then 'X'
+                  else ' '
+             end
+        else ' '
+      end as Complex_unit,
+      
+      @Semantics.amount.currencyCode: 'Forcurkey'
+      forcuram   as Forcuram,
+      forcurkey  as Forcurkey,
+      @Semantics.amount.currencyCode: 'Loccurkey'
+      loccuram   as Loccuram,
+      loccurkey  as Loccurkey,
+}
+where
+  luggweight > 20
+```
+
+
+</br>
 </br>
 </br>
 
