Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -323,4 +323,37 @@ define view entity ZCDSSTUDENT_C203T as select from ztstudent_c203t
 </br>
 </br>
 
-### 실습 1
+### 실습 2
+- cast 실습
+- case when 실습
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_C_EmployeeQuery'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_C_EmployeeQuery
+  as select from /LRN/R_Employee_Rel
+{
+  key EmployeeId,
+      FirstName,
+      LastName,
+      DepartmentId,
+
+      _Department.Description                  as DepartmentDescription,
+      _Department._Assistant.LastName          as AssistantName,
+
+      @EndUserText.label: 'Employee Role'
+      case EmployeeId
+          when _Department.HeadId then 'H'
+          when _Department.AssistantId then 'A'
+          else ' '
+      end                                      as EmployeeRole,
+
+      @EndUserText.label: 'Monthly Salary'
+      @Semantics.amount.currencyCode: 'CurrencyCode'
+      cast( AnnualSalary as abap.fltp ) / 12.0 as MonthlySalary,
+      CurrencyCode,
+
+      _Department
+}
+```
