--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -1,11 +1,9 @@
 ## <  핵심 개념 >
-- **1) Annotation Propagation (필드 참조 + 애노테이션 전파)**
-- **2) ABAP Dictionary에서 Foreign Key 설정 문법**
-- **3) CDS Association**
-- **4) Syntax Warning – Association Cardinality 불일치**
-- **5) Association만 사용 vs 실제 JOIN 발생 조건**
-- **6) CDS WHERE·필터·집계 함수**
-- **7) ABAP SQL Association Path Expression 사용법**
+- **1) CDS에서 산술 연산(계산 필드) 가능**
+- **2) CDS에서 Literal(고정값) 사용 가능**
+- **3) CDS에서 CAST로 타입 변환 가능**
+- **4) 나누기 연산 시 CAST가 필요한 이유**
+- **5) CDS CASE 구문 정리 (Simple vs Complex 분기 구조)**
 </br>
 </br>
 
