Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -213,6 +213,20 @@ define view entity ZCDSBOOK_B03
 where
   luggweight > 20
 ```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < CDS → OData → Gateway Client 흐름 정리 >
+</br>
+
+#### 1) Gateway에서 CDS OData 서비스 실행
+
+<img width="523" height="124" alt="image" src="https://github.com/user-attachments/assets/e7f108d9-a47d-48fc-9bdd-b8a0e278a93a" />
 
 
 </br>
